--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -7,11 +7,18 @@
   transform: translate(-50%, -50%);
 }
 
+.hero h1 {
+    text-align: center;
+}
+
 .hero button {
     border: 2px solid #1a1a1a;
+    text-align: center;
+    padding: 5px;
 }
 
 .hero button:hover {
     background-color: #535bf2;
     color: white;
+    
 }
