--- a/src/index.css
+++ b/src/index.css
@@ -26,30 +26,27 @@ body {
 }
 
 h1 {
-  font-size: 1.5em;
+  font-size: 1em;
   line-height: 1.1;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.4em 1em;
   font-size: 1.1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #ffffff;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
   border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  color: #ffffff;
+  background-color: #646cff;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -60,4 +57,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
